# shybox

./: .gitignore  .zenodo.json  AUTHORS  CHANGELOG  CODEOWNERS  README.md  pyproject.toml  requirements_shybox_base.yaml  setup_conda_shybox_base.sh  setup_shybox_base.sh  shybox_base_settings
apptainer/: apptainer_docker_conversion.txt  apptainer_docker_conversion_converter.txt  apptainer_docker_conversion_runner.txt  apptainer_installation_step.txt
docker/: Dockerfile  README_DOCKER_INSTALL.md  README_DOCKER_UNINSTALL.md  README_DOCKER_WORKFLOW.md  app_entrypoint.cmd  app_runner_workflow_hmc_marche.json
docker/analyzer/: Dockerfile  app_entrypoint.py  app_entrypoint_analyzer_ts.cmd  app_entrypoint_analyzer_ts.env  volume_tool_remove_ts.sh  volume_tool_set_ts.sh
docker/dataset/: Dockerfile  app_converter_workflow_hmc_destine_icon.json  app_converter_workflow_hmc_destine_ifs.json  app_entrypoint.cmd  app_entrypoint.env  app_entrypoint.py  app_entrypoint.sh  app_entrypoint_convert_icon2hmc.cmd  app_entrypoint_convert_ifs2hmc.cmd  app_entrypoint_converter_icon2hmc.cmd  app_entrypoint_converter_icon2hmc.env  app_entrypoint_converter_ifs2hmc.cmd  app_entrypoint_converter_ifs2hmc.env  volume_tool_remove_icon.sh  volume_tool_remove_ifs.sh  volume_tool_set_icon.sh  volume_tool_set_ifs.sh
docker/merger/: Dockerfile
docker/runner/: Dockerfile  app_entrypoint.env  app_entrypoint.py  app_entrypoint_runner_icon.cmd  app_entrypoint_runner_ifs.cmd  app_entrypoint_runner_ifs.env  app_runner_workflow_hmc_marche.json  volume_tool_remove_icon.sh  volume_tool_remove_ifs.sh  volume_tool_set_icon.sh  volume_tool_set_ifs.sh
example/: app_data_grid_main.py  driver_data_grid.py
hyms/default/: lib_default_geo.py  lib_default_info.py  lib_default_log.py  lib_default_time.py
hyms/generic_toolkit/: lib_default_args.py  lib_utils_args.py  lib_utils_debug.py  lib_utils_dict.py  lib_utils_envs.py  lib_utils_file.py  lib_utils_fortran.py  lib_utils_logging.py  lib_utils_namelist.py  lib_utils_process.py  lib_utils_settings.py  lib_utils_string.py  (+2 more)
polytope/: .gitignore  README.md  requirements.txt
shybox/: __init__.py
tests/: application.namelist  test_runner_namelist.py  test_runner_settings.json  test_runner_settings.py  test_runner_time.py
web/: app.py  config.json  info.txt  utils_config.py  utils_grid.py  utils_runs.py  utils_sections.py
(+289 files in other folders)
