[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.shybox]
build_date = "2026-01-20"

[project]
name = "shybox"
version = "1.3.3"
description = "A package to set and run snow and hydrological models and analyze results, developed by CIMA Research Foundation"

authors = [
    { name = "Fabio Delogu", email = "fabio.delogu@cimafoundation.org" },
    { name = "Andrea Libertino", email = "andrea.libertino@cimafoundation.org" },
    { name = "Francesco Avanzi", email = "francesco.avanzi@cimafoundation.org" }
]

maintainers = [
    { name = "Fabio Delogu", email = "fabio.delogu@cimafoundation.org" },
    { name = "Andrea Libertino", email = "andrea.libertino@cimafoundation.org" }
]

license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.5",
    "xarray>=2024.3.0",
    "scipy>=1.8.0",
    "netCDF4>=1.5.8",
]

[project.urls]
Repository = "https://github.com/c-hydro/shybox"

[project.optional-dependencies]
thumbnails = []
remote-data = []
